[package]
name = "smbios"
version = "0.7.0"
authors = ["Jeffrey R. Gerber <jeffreygerber@gmail.com>, Ante Čulo <dante2711@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "SMBIOS Library"
repository = "https://github.com/jrgerber/smbios-lib"
readme = "README.md"
keywords = ["bios", "smbios", "dmtf"]
categories = ["hardware-support"]

# prevention from accidentally publishing
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smbioslib"
path = "src/lib.rs"

[[bin]]
name = "smbiosdump"
path = "src/main.rs"

[dependencies]
getopts = "0.2.21"

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "^0.2"
mach = "^0.3"
core-foundation = "~0.6"
core-foundation-sys = "~0.6"
io-kit-sys = "0.1.0"
