[package]
name = "smbios-lib"
version = "0.8.0"
authors = ["Jeffrey R. Gerber <jeffreygerber@gmail.com>", "Ante Čulo <dante2711@gmail.com>", "Juan Zuluaga <juzuluag@hotmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "SMBIOS Library"
homepage = "https://github.com/jrgerber/smbios-lib"
repository = "https://github.com/jrgerber/smbios-lib"
readme = "README.md"
keywords = ["bios", "smbios", "dmtf"]
categories = ["hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smbioslib"
path = "src/lib.rs"

[[bin]]
name = "smbiosdump"
path = "src/main.rs"
required-features = ["getopts", "serde_json"]

[dependencies]
getopts = { version = "0.2.21", optional = true }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1.0", optional = true }
x86_64 = { version = "0.14.3", optional = true }

[target.'cfg(windows)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
libc = "^0.2"
mach = "^0.3"
core-foundation = "~0.6"
core-foundation-sys = "~0.6"
io-kit-sys = "0.1.0"

[features]
default = ["serde/std", "getopts", "serde_json"]
no_std = ["serde/alloc"]
